tests/final/expect/15__diag__malformed_no_crash.diag
Diagnostics:
Error: Invalid character in source at tests/final/cases/15__torture__malformed_no_crash.c:3:5 (got '@')
Error: Invalid character in source at tests/final/cases/15__torture__malformed_no_crash.c:3:6 (got '@')
Error: Invalid character in source at tests/final/cases/15__torture__malformed_no_crash.c:3:7 (got '@')
